# spotify-tui

./: Cargo.toml
src/: main.rs  network.rs
src/cli/: clap.rs  handle.rs  mod.rs  util.rs
