[package]
name = "spotify-tui"
description = "A terminal user interface for Spotify"
homepage = "https://github.com/Rigellute/spotify-tui"
documentation = "https://github.com/Rigellute/spotify-tui"
repository = "https://github.com/Rigellute/spotify-tui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.25.0"
authors = ["Alexander Keliris <rigellute@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "^0.10"
tui = { version = "^0.19", features = ["crossterm"], default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
dirs = "^5.0"
clap = { version = "^4.4", features = ["env", "derive"] }
unicode-width = "^0.1"
backtrace = "^0.3"
arboard = "^3.3"
crossterm = "^0.27"
tokio = { version = "^0.2", features = ["full"] }
rand = "^0.8"
anyhow = "^1.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "spt"
